add spacing, alert, containers, modifying navbar

--- a/website/index.html
+++ b/website/index.html
@@ -15,7 +15,7 @@
 
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Karácsony Romániában</a>
+                <a class="navbar-brand" href="#cim">Karácsony Romániában</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -42,9 +42,10 @@
     </header>
 
 
-    <main class="container">
+    <main class="container mt-5">
+        <h1 id="cim" class="text-center mb-3">Karácsony Romániában</h1>
         <h2>Történet</h2>
-        <div id="tortenet">
+        <div id="tortenet" class="mb-5">
             <section class="row">
                 <article class="col-lg-6 col-12">
                     <p>Egy hóval borított reggelen, a romániai hegyek között fekvő kis faluban, Saroltavárban,
@@ -90,7 +91,7 @@
 
         </div>
 
-        <div class="row">
+        <div class="row mb-5">
             <div id="szereplok" class="col-lg-6 col-12">
                 <h2>Szereplők</h2>
                 <table class="table">
@@ -131,23 +132,25 @@
                 </table>
             </div>
         </div>
-        <div id="jatekotlet">
-            <h2>Játékötlet</h2>
-            <p>A játékban a játékosok Livia és Andrei szerepébe bújva egy varázslatos kalandra indulnak a havas hegyek
-                között, hogy megtalálják a titkos karácsonyi kincset. Az út során különböző feladatokat kell
-                megoldaniuk:</p>
-            <ol> <!--Legyen szerintem nagyobb a sorköz a list itemek között ~Mia-->
-                <li><b>Térkép rejtvények:</b> A játékosoknak egy varázslatos térképet kell megfejteniük, ami a titkos
-                    útvonalakat és a különleges helyszíneket jelzi.</li>
-                <li><b>Tigris-keresés:</b> A tigris szobrocskát meg kell találni a környezetben, és egy varázslatos
-                    csillagszórót kell hozzárendelniük hozzá.</li>
-                <li><b>Hópehely gyűjtés:</b> A hópehely-keresés során a játékosoknak különböző területeken kell
-                    felfedezniük, hogy elérjék a kincshez vezető nyomokat.</li>
-                <li><b>Keksz-gyűjtés:</b> A játékosok kekszeket gyűjthetnek, amik segítenek a történet előrehaladásában,
-                    és közben megoldhatnak egy-egy ügyességi feladatot.</li>
-            </ol>
-            <p>A játék célja, hogy a játékosok együtt dolgozzanak, hogy megtalálják a varázslatos kincset, miközben
-                különböző kihívásokkal néznek szembe, és közben megtapasztalják a barátság és a szeretet erejét.</p>
+        <div id="jatekotlet" class="row">
+            <div class="col-12">
+                <h2>Játékötlet</h2>
+                <p>A játékban a játékosok Livia és Andrei szerepébe bújva egy varázslatos kalandra indulnak a havas hegyek
+                    között, hogy megtalálják a titkos karácsonyi kincset. Az út során különböző feladatokat kell
+                    megoldaniuk:</p>
+                <ol> <!--Legyen szerintem nagyobb a sorköz a list itemek között ~Mia-->
+                    <li><b>Térkép rejtvények:</b> A játékosoknak egy varázslatos térképet kell megfejteniük, ami a titkos
+                        útvonalakat és a különleges helyszíneket jelzi.</li>
+                    <li><b>Tigris-keresés:</b> A tigris szobrocskát meg kell találni a környezetben, és egy varázslatos
+                        csillagszórót kell hozzárendelniük hozzá.</li>
+                    <li><b>Hópehely gyűjtés:</b> A hópehely-keresés során a játékosoknak különböző területeken kell
+                        felfedezniük, hogy elérjék a kincshez vezető nyomokat.</li>
+                    <li><b>Keksz-gyűjtés:</b> A játékosok kekszeket gyűjthetnek, amik segítenek a történet előrehaladásában,
+                        és közben megoldhatnak egy-egy ügyességi feladatot.</li>
+                </ol>
+                <p class="alert alert-info" role="alert">A játék célja, hogy a játékosok együtt dolgozzanak, hogy megtalálják a varázslatos kincset, miközben
+                    különböző kihívásokkal néznek szembe, és közben megtapasztalják a barátság és a szeretet erejét.</p>
+            </div>
         </div>
 
     </main>
