style.css elkeszitese

--- a/website/index.html
+++ b/website/index.html
@@ -13,7 +13,7 @@
 <body>
     <header class="container-fluid">
 
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#cim">Karácsony Romániában</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -44,10 +44,11 @@
 
     <main class="container mt-5">
         <h1 id="cim" class="text-center mb-3">Karácsony Romániában</h1>
-        <h2>Történet</h2>
+        
         <div id="tortenet" class="mb-5">
             <section class="row">
                 <article class="col-lg-6 col-12">
+                    <h2>Történet</h2>
                     <p>Egy hóval borított reggelen, a romániai hegyek között fekvő kis faluban, Saroltavárban,
                         <i>Livia</i> és barátja, <i>Andrei</i> egy különleges kalandra indultak.
                         A falu házait vastagon borította a hó, a fák ágai csillogtak a pelyhektől, és a légkör tele volt
@@ -57,7 +58,7 @@
                     </p>
                 </article>
                 <article class="col-lg-6 col-12">
-                    <p>Livia és Andrei kutyájukkal, <i>Max</i>szal indultak útnak, hogy elérjék a falu szélén lévő régi
+                    <p id="masodik">Livia és Andrei kutyájukkal, <i>Max</i>szal indultak útnak, hogy elérjék a falu szélén lévő régi
                         tölgyfát, ahol egy titkos kincs rejtekhelye volt.
                         A helyi legenda szerint, ha a fa alatt elrejtesz egy csillagszórót, és köré helyezel egy tigris
                         alakú figurát, a kívánságod valóra válik.
@@ -152,7 +153,6 @@
                     különböző kihívásokkal néznek szembe, és közben megtapasztalják a barátság és a szeretet erejét.</p>
             </div>
         </div>
-
     </main>
 
     <footer class="container-fluid">
