--- a/website/index.html
+++ b/website/index.html
@@ -44,7 +44,7 @@
 
     <main class="container mt-5">
         <h1 id="cim" class="text-center mb-3">Karácsony Romániában</h1>
-        
+
         <div id="tortenet" class="mb-5">
             <section class="row">
                 <article class="col-lg-6 col-12">
@@ -58,7 +58,8 @@
                     </p>
                 </article>
                 <article class="col-lg-6 col-12">
-                    <p id="masodik">Livia és Andrei kutyájukkal, <i>Max</i>szal indultak útnak, hogy elérjék a falu szélén lévő régi
+                    <p id="masodik">Livia és Andrei kutyájukkal, <i>Max</i>szal indultak útnak, hogy elérjék a falu
+                        szélén lévő régi
                         tölgyfát, ahol egy titkos kincs rejtekhelye volt.
                         A helyi legenda szerint, ha a fa alatt elrejtesz egy csillagszórót, és köré helyezel egy tigris
                         alakú figurát, a kívánságod valóra válik.
@@ -95,61 +96,65 @@
         <div class="row mb-5">
             <div id="szereplok" class="col-lg-6 col-12">
                 <h2>Szereplők</h2>
-                <table class="table">
+                <table id="elso" class="table">
                     <tr>
                         <th>Livia</th>
-                        <td>12 éves kislány</td>
+                        <td>12 éves kislány <img class="img-fluid" src="images/livia.jpg" alt=""></td>
                     </tr>
                     <tr>
                         <th>Andrei</th>
-                        <td>12 éves kisfiú</td>
+                        <td>12 éves kisfiú <img class="img-fluid" src="images/andrei.png" alt=""></td>
                     </tr>
                     <tr>
                         <th>Max</th>
-                        <td>3 éves kiskutya</td>
+                        <td>3 éves kiskutya <img class="img-fluid" src="images/max.jpg" alt=""></td>
                     </tr>
                     <tr>
                         <th>Kedves öregasszony</th>
-                        <td>71 éves nagymama</td>
+                        <td>71 éves nagymama <img class="img-fluid" src="images/oregasszony.jpg" alt=""></td>
                     </tr>
                 </table>
             </div>
-            <div id="helyszinek" class="col-lg-6 col-12">
-                <h2>Helyszínek</h2>
-                <table class="table">
-                    <tr>
-                        <th>Saroltavár</th>
-                        <td>Livia és Andrei falva</td>
-                    </tr>
-                    <tr>
-                        <th>Tölgyfa töve</th>
-                        <td>A falú határában lévő tölgyfa</td>
-                        <!--bocsi nem nézett ki jól hogy nem volt mellé írva ~Mia-->
-                    </tr>
-                    <tr>
-                        <th>Kiskunyhó</th>
-                        <td>Kedves öregasszony lakhelye</td>
-                    </tr>
-                </table>
-            </div>
+        <div id="helyszinek" class="col-lg-6 col-12">
+            <h2>Helyszínek</h2>
+            <table class="table">
+                <tr>
+                    <th>Saroltavár</th>
+                    <td>Livia és Andrei falva</td>
+                </tr>
+                <tr>
+                    <th>Tölgyfa töve</th>
+                    <td>A falú határában lévő tölgyfa</td>
+                    <!--bocsi nem nézett ki jól hogy nem volt mellé írva ~Mia-->
+                </tr>
+                <tr>
+                    <th>Kiskunyhó</th>
+                    <td>Kedves öregasszony lakhelye</td>
+                </tr>
+            </table>
+        </div>
         </div>
         <div id="jatekotlet" class="row">
             <div class="col-12">
                 <h2>Játékötlet</h2>
-                <p>A játékban a játékosok Livia és Andrei szerepébe bújva egy varázslatos kalandra indulnak a havas hegyek
+                <p>A játékban a játékosok Livia és Andrei szerepébe bújva egy varázslatos kalandra indulnak a havas
+                    hegyek
                     között, hogy megtalálják a titkos karácsonyi kincset. Az út során különböző feladatokat kell
                     megoldaniuk:</p>
                 <ol> <!--Legyen szerintem nagyobb a sorköz a list itemek között ~Mia-->
-                    <li><b>Térkép rejtvények:</b> A játékosoknak egy varázslatos térképet kell megfejteniük, ami a titkos
+                    <li><b>Térkép rejtvények:</b> A játékosoknak egy varázslatos térképet kell megfejteniük, ami a
+                        titkos
                         útvonalakat és a különleges helyszíneket jelzi.</li>
                     <li><b>Tigris-keresés:</b> A tigris szobrocskát meg kell találni a környezetben, és egy varázslatos
                         csillagszórót kell hozzárendelniük hozzá.</li>
                     <li><b>Hópehely gyűjtés:</b> A hópehely-keresés során a játékosoknak különböző területeken kell
                         felfedezniük, hogy elérjék a kincshez vezető nyomokat.</li>
-                    <li><b>Keksz-gyűjtés:</b> A játékosok kekszeket gyűjthetnek, amik segítenek a történet előrehaladásában,
+                    <li><b>Keksz-gyűjtés:</b> A játékosok kekszeket gyűjthetnek, amik segítenek a történet
+                        előrehaladásában,
                         és közben megoldhatnak egy-egy ügyességi feladatot.</li>
                 </ol>
-                <p class="alert alert-info" role="alert">A játék célja, hogy a játékosok együtt dolgozzanak, hogy megtalálják a varázslatos kincset, miközben
+                <p class="alert alert-info" role="alert">A játék célja, hogy a játékosok együtt dolgozzanak, hogy
+                    megtalálják a varázslatos kincset, miközben
                     különböző kihívásokkal néznek szembe, és közben megtapasztalják a barátság és a szeretet erejét.</p>
             </div>
         </div>
