adding/removing/modifying images

--- a/website/index.html
+++ b/website/index.html
@@ -43,8 +43,8 @@
 
 
     <main class="container mt-5">
-        <h1 id="cim" class="text-center mb-3">Karácsony Romániában</h1>
-
+        <img id="romania" class="img-fluid" src="images/romania.png" alt="">
+        <h1 id="cim" class="text-center">Karácsony Romániában</h1>
         <div id="tortenet" class="mb-5">
             <section class="row">
                 <article class="col-lg-6 col-12">
@@ -99,19 +99,23 @@
                 <table id="elso" class="table">
                     <tr>
                         <th>Livia</th>
-                        <td>12 éves kislány <img class="img-fluid" src="images/livia.jpg" alt=""></td>
+                        <td>12 éves kislány </td>
+                        <td><img class="img-fluid" src="images/livia.jpg" alt=""></td>
                     </tr>
                     <tr>
                         <th>Andrei</th>
-                        <td>12 éves kisfiú <img class="img-fluid" src="images/andrei.png" alt=""></td>
+                        <td>12 éves kisfiú </td>
+                        <td><img class="img-fluid" src="images/andrei.png" alt=""></td>
                     </tr>
                     <tr>
                         <th>Max</th>
-                        <td>3 éves kiskutya <img class="img-fluid" src="images/max.jpg" alt=""></td>
+                        <td>3 éves kiskutya </td>
+                        <td><img class="img-fluid" src="images/max.jpg" alt=""></td>
                     </tr>
                     <tr>
                         <th>Kedves öregasszony</th>
-                        <td>71 éves nagymama <img class="img-fluid" src="images/oregasszony.jpg" alt=""></td>
+                        <td>71 éves nagymama </td>
+                        <td><img class="img-fluid" src="images/oregasszony.jpg" alt=""></td>
                     </tr>
                 </table>
             </div>
