--- a/website/index.html
+++ b/website/index.html
@@ -43,8 +43,15 @@
 
 
     <main class="container mt-5">
-        <img id="romania" class="img-fluid" src="images/romania.png" alt="">
-        <h1 id="cim" class="text-center">Karácsony Romániában</h1>
+        <div class="row">
+            <div class="col-12 col-lg-6">
+                <h1 id="cim" class="text-center mt-5">Karácsony Romániában</h1>
+            </div>
+        
+            <div class="col-12 col-lg-6" >
+                <img id="romania" class="img-fluid d-block mx-auto" src="images/romania.png" alt="">
+            </div>
+        </div>
         <div id="tortenet" class="mb-5">
             <section class="row">
                 <article class="col-lg-6 col-12">
